# bioprinting-pipeline-honeycomb

./: .gitignore  README.md  commit_msg.txt  dataset-metadata.json  pyproject.toml  requirements.txt
configs/: default.py
data/: __init__.py  dataset.py  multiview_dataset.py
docs/: ACTION_PLAN.md  THESIS_KNOWLEDGE_BASE.md
models/: __init__.py  autoregressive_decoder.py  detr_decoder.py  encoder.py  volumetric_decoder.py  volumetric_encoder.py
modules/: __init__.py  conformal_mapping.py  inverse_kinematics.py  robot_model.py  trajectory_planner.py  tsp_solver.py  wound_to_trajectory.py
notebooks/: 01-ablation-study-autoregressive-kaggle-extended.ipynb  01-ablation-study-autoregressive-kaggle.ipynb  01-ablation-study-detr-kaggle-extended.ipynb  01-ablation-study-detr-kaggle.ipynb  01-ablation-study-polar-kaggle-extended.ipynb  01-ablation-study-polar-kaggle.ipynb  02_volumetric_ablation_kaggle.ipynb  kernel-metadata.json
paper/: main.tex  references.bib
results/ablation/autoregressive/: history.json  test_results.json
results/ablation/autoregressive_extended/: history.json  test_results.json
results/ablation/detr/: history.json  test_results.json
scripts/: _fix_all_notebooks.py  _fix_gpu_compat_and_paths.py  _fix_gpu_guard.py  _fix_mask_polar.py  _fix_nb02.py  _fix_recursion_guard.py  _list_cells.py  demo_pipeline.py
tests/: test_data.py  test_models.py  test_training_pipeline.py  test_trajectory_pipeline.py  test_volumetric.py
training/: ablation.py  evaluate.py  train.py
utils/: logging_config.py  wound_datamodule.py
(+6 files in other folders)
